@@ -52,5 +52,7 @@ py-gold=High Tech EQ Pyanodons Package
 
 # electronics
 momo-electronics-memory-a=Basic Memory unit 
-momo-electronics-memory-b=Memory unit 
-momo-electronics-memory-c=Advanced Memory unit
+momo-electronics-memory-a-2=Memory unit
+momo-electronics-memory-a-3=Advanced Memory unit
+momo-electronics-memory-b=Memory unit type-C
+momo-electronics-memory-c=Memory unit type-Y
