@@ -3,6 +3,8 @@ v. 0.17.5
 - balanced science recipe to match version 0.17
 - balanced robot recipe
 - include glass into some recipe
+- move gem to bob raw material
+- add memory unit for bob extended
 
 v. 0.17.4
 - lamp now use glass
